--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="movie_overview_textsize">24sp</dimen>
+    <dimen name="release_date_textsize">18sp</dimen>
+    <dimen name="rating_textsize">22sp</dimen>
+    <dimen name="gridview_colWidth">180dp</dimen>
 </resources>
