--- a/app/src/main/res/menu/menu_sort_by.xml
+++ b/app/src/main/res/menu/menu_sort_by.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!--<item android:title="Sort by most popular"
+<item android:title="Sort by most popular"
     android:id="@+id/menu_sort_by_most_popular"
     app:showAsAction="never"
     />
@@ -10,9 +10,9 @@
     <item android:title="Sort by top rated"
         android:id="@+id/menu_sort_by_top_rated"
         app:showAsAction="never"
-        />-->
-    <item android:title="Settings"
+        />
+   <!-- <item android:title="Settings"
         android:id="@+id/menu_settings"
         app:showAsAction="never"
-        android:visible="true" />
+        android:visible="true" />-->
 </menu>
